# templates

./: README.md  install.sh  justfile
flaskapp/hooks/: post_gen_project.sh
flaskapp/{{cookiecutter.package_name}}/: MANIFEST.in  Procfile  README.md  environment.yml  justfile  mkdocs.yml  pyproject.toml  tox.ini
flaskapp/{{cookiecutter.package_name}}/vite/: index.html  package.json  vite.config.js
flaskapp/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  vite.py
nestjs/: cookiecutter.json
nestjs/{{cookiecutter.package_name}}/: package.json
nestjs/{{cookiecutter.package_name}}/docs/: index.md
nestjs/{{cookiecutter.package_name}}/scripts/: mkdocs.sh
nestjs/{{cookiecutter.package_name}}/src/: app.controller.spec.ts
psmodule/: cookiecutter.json
psmodule/hooks/: post_gen_project.sh
psmodule/{{cookiecutter.module_name}}/: README.md  justfile  {{cookiecutter.module_name}}.Tests.ps1
psmodule/{{cookiecutter.module_name}}/scripts/: Activate.ps1  Install.ps1
pypackage/: cookiecutter.json
pypackage/{{cookiecutter.package_name}}/: .gitignore  README.md  Untitled.ipynb  justfile  mkdocs.yml  pyproject.toml  requirements_dev.txt.in
pypackage/{{cookiecutter.package_name}}/.github/workflows/: qa.yaml
pypackage/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py
tspackage/: cookiecutter.json
tspackage/{{cookiecutter.package_name}}/: .gitignore  package.json  tsconfig.json
tspackage/{{cookiecutter.package_name}}/src/: index.ts  main.ts
tspackage/{{cookiecutter.package_name}}/test/: example.ts
(+2 files in other folders)
